# zipfs-law

./: app.py  latarnik.txt  model-malpy.txt  pyproject.toml
tests/: test_parse.py
zipfs_law/: app.py  graphs.py  parse.py
