[tool.poetry]
name = "zipfs-law"
version = "0.1.0"
description = ""
authors = ["Piotr Krawiec <piotr.krawiec23@gmail.com>"]
readme = "README.md"
packages = [{include = "zipfs_law"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
plotly = "^5.17.0"
streamlit = "^1.27.2"
networkx = "^3.1"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.0"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
